--- a/index.html
+++ b/index.html
@@ -1,93 +1,439 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главные Нейросети</title>
+    <title>Возможности нейросетей</title>
     <style>
+        /* Общие стили */
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background: linear-gradient(to right, #6a11cb, #2575fc);
+            color: #fff;
+            overflow-x: hidden;
         }
-        header {
-            background: #35424a;
-            color: #ffffff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        h1 {
-            margin: 0;
-        }
+
+        /* Стили для горизонтального меню */
         nav {
-            margin: 15px 0;
+            background-color: rgba(0, 0, 0, 0.3);
+            padding: 15px 0;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 100;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
-        nav a {
-            color: #ffffff;
+
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+        }
+
+        nav ul li {
+            margin: 0 20px;
+        }
+
+        nav ul li a {
+            color: #fff;
             text-decoration: none;
-            margin: 0 15px;
+            padding: 12px 20px;
+            border-radius: 25px;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            font-size: 1.1em;
+            display: block;
+            line-height: 1;
         }
+
+        nav ul li a:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+            transform: scale(1.1);
+        }
+
+        /* Стили для основного контента */
+        main {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 60px;
+            padding-top: 80px;
+            background-color: rgba(255, 255, 255, 0.05);
+            border-radius: 15px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+            backdrop-filter: blur(10px);
+        }
+
         section {
-            padding: 20px;
-            margin: 20px auto;
-            max-width: 800px;
-            background: #ffffff;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            padding: 40px;
+            margin-bottom: 50px;
+            background-color: rgba(255, 255, 255, 0.08);
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.1);
         }
-        h2 {
-            color: #35424a;
+
+        section h2 {
+            color: #fff;
+            font-size: 2.2em;
+            margin-top: 0;
+            border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+            padding-bottom: 15px;
+            margin-bottom: 30px;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+        }
+
+        section h3 {
+            color: #eee;
+            font-size: 1.5em;
+            margin-top: 25px;
+            margin-bottom: 15px;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+        }
+
+        section p {
+            line-height: 1.7;
+            color: #ddd;
+            font-size: 1.1em;
+        }
+
+        section ul {
+            list-style-type: square;
+            padding-left: 30px;
+        }
+
+        section ul li {
+            margin-bottom: 8px;
+        }
+
+        .image-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 30px;
+            flex-wrap: wrap;
+        }
+
+        .image-container img {
+            width: 360px;
+            height: auto;
+            max-width: 100%;
+            margin: 15px;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s ease;
+        }
+
+        .image-container img:hover {
+            transform: scale(1.05);
+        }
+
+        audio {
+            width: 100%;
+            margin-top: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+        }
+
+        footer {
+            background-color: rgba(0, 0, 0, 0.5);
+            color: #fff;
+            padding: 25px;
+            text-align: center;
+            border-top: 2px solid rgba(255, 255, 255, 0.3);
+            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        @media (max-width: 768px) {
+            main {
+                padding: 30px;
+                padding-top: 80px;
+            }
+
+            section {
+                padding: 25px;
+            }
+
+            nav ul {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            nav ul li {
+                margin: 10px 0;
+            }
+        }
+
+        .help-button {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            background-color: #007bff;
+            color: #fff;
+            font-size: 28px;
+            text-align: center;
+            line-height: 60px;
+            cursor: pointer;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        .help-button:hover {
+            background-color: #0056b3;
+            transform: scale(1.1);
+        }
+
+        .form-popup {
+            display: none;
+            position: fixed;
+            bottom: 30px;
+            right: 100px;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            z-index: 1000;
+            background-color: rgba(0, 0, 0, 0.6);
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(10px);
+        }
+
+        .form-container {
+            max-width: 400px;
+            padding: 20px;
+        }
+
+        .form-container label {
+            color: #eee;
+            font-size: 1.2em;
+            margin-bottom: 8px;
+            display: block;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+        }
+
+        .form-container input[type=text],
+        .form-container input[type=email],
+        .form-container textarea {
+            width: 100%;
+            padding: 15px;
+            margin: 8px 0 25px 0;
+            border: none;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 8px;
+            color: #fff;
+            font-size: 1em;
+            box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.3);
+            transition: background-color 0.3s ease;
+        }
+
+        .form-container input[type=text]:focus,
+        .form-container input[type=email]:focus,
+        .form-container textarea:focus {
+            background-color: rgba(255, 255, 255, 0.2);
+            outline: none;
+        }
+
+        .form-container .btn {
+            background-color: #007bff;
+            color: white;
+            padding: 18px 30px;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+            margin-bottom: 15px;
+            opacity: 0.9;
+            border-radius: 30px;
+            font-size: 1.1em;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        .form-container .btn:hover {
+            background-color: #0056b3;
+            transform: scale(1.05);
+        }
+
+        .form-container .cancel {
+            background-color: #dc3545;
+        }
+
+        .thank-you-message {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: rgba(0, 0, 0, 0.8);
+            color: #fff;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
+            z-index: 1001;
+            text-align: center;
+            font-size: 1.3em;
+            backdrop-filter: blur(10px);
+        }
+
+        h1 {
+            color: #fff;
+            text-align: center;
+            margin-bottom: 30px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+        }
+
+        ::-webkit-input-placeholder {
+            color: #ccc !important;
+        }
+
+        ::-moz-placeholder {
+            color: #ccc !important;
+        }
+
+        :-ms-input-placeholder {
+            color: #ccc !important;
+        }
+
+        :-moz-placeholder {
+            color: #ccc !important;
         }
     </style>
+    <script>
+        function openForm() {
+            document.getElementById("myForm").style.display = "block";
+        }
+
+        function closeForm() {
+            document.getElementById("myForm").style.display = "none";
+        }
+
+        function submitForm() {
+            document.getElementById("name").value = "";
+            document.getElementById("email").value = "";
+            document.getElementById("message").value = "";
+
+            document.getElementById("myForm").style.display = "none";
+            document.getElementById("thankYouMessage").style.display = "block";
+
+            setTimeout(function () {
+                document.getElementById("thankYouMessage").style.display = "none";
+            }, 3000);
+        }
+    </script>
 </head>
+
 <body>
-
-<header>
-    <h1>Главные Нейросети</h1>
     <nav>
-        <a href="#cnn">Сверточные Нейронные Сети (CNN)</a>
-        <a href="#rnn">Рекуррентные Нейронные Сети (RNN)</a>
-        <a href="#dnn">Глубокие Нейронные Сети (DNN)</a>
-        <a href="#transformers">Трансформеры</a>
-        <a href="#gan">Генеративно-Состязательные Сети (GAN)</a>
+        <ul>
+            <li><a href="#home">Главная</a></li>
+            <li><a href="#features">Возможности</a></li>
+            <li><a href="#tools">Инструменты</a></li>
+            <li><a href="#author">Об авторе</a></li>
+        </ul>
     </nav>
-</header>
 
-<section id="cnn">
-    <h2>Сверточные Нейронные Сети (CNN)</h2>
-    <p>Эти сети особенно эффективны для обработки изображений и видео. Они используют специальные слои, которые помогают выделять важные признаки, такие как края и текстуры.</p>
-    <p><strong>Применение:</strong> Распознавание лиц, анализ медицинских изображений, автоматическая разметка фотографий.</p>
-</section>
+    <main>
+        <section id="home">
+            <h2>Добро пожаловать!</h2>
+            <p>Добро пожаловать на сайт о нейросетях! Здесь вы узнаете, на что способны эти удивительные технологии будущего!
+                Мы рассмотрим основные возможности нейросетей, примеры их использования и инструменты, которые помогут вам начать
+                работать с ними.
+            </p>
+        </section>
 
-<section id="rnn">
-    <h2>Рекуррентные Нейронные Сети (RNN)</h2>
-    <p>RNN предназначены для работы с последовательными данными, такими как текст или временные ряды. Они могут запоминать информацию о предыдущих состояниях.</p>
-    <p><strong>Применение:</strong> Обработка естественного языка, предсказание временных рядов, создание текстов.</p>
-</section>
+        <section id="features">
+            <h2>Что такое нейросети?</h2>
+            <p>
+                Нейросети — это вычислительные модели, вдохновленные структурой и функционированием человеческого мозга.
+                Они состоят из взаимосвязанных узлов, называемых нейронами, которые обрабатывают и передают информацию.
+                Нейросети обучаются на больших объемах данных, что позволяет им выявлять закономерности, делать прогнозы и принимать
+                решения.
+            </p>
+            <h2>Возможности нейросетей</h2>
+            <p>Нейросети обладают широким спектром возможностей, включая:</p>
+            <ul>
+                <li>Распознавание изображений и видео</li>
+                <li>Обработка естественного языка</li>
+                <li>Прогнозирование и анализ данных</li>
+                <li>Автоматическое управление и робототехника</li>
+            </ul>
+            <p>Они находят применение в медицине, финансах, транспорте и многих других областях.</p>
 
-<section id="dnn">
-    <h2>Глубокие Нейронные Сети (DNN)</h2>
-    <p>Это общая категория нейросетей с несколькими слоями, которые могут обучаться на больших объемах данных. Глубокие сети способны выявлять сложные паттерны.</p>
-    <p><strong>Применение:</strong> Классификация изображений, распознавание речи, генерация контента.</p>
-</section>
+            <h2>Что умеют нейросети?</h2>
+            <h3>Генерация текста</h3>
+            <p>Нейросети могут генерировать осмысленный текст на основе заданного образца или темы.</p>
+            <p>Прочитайте рассказ, созданный нейросетью:</p>
+            <div style="position:relative;padding-top:max(60%,324px);width:100%;height:0;"><iframe
+                    style="position:absolute;border:none;width:100%;height:100%;left:0;top:0;"
+                    src="https://online.fliphtml5.com/vkqqg/zege/" seamless="seamless" scrolling="no"
+                    frameborder="0" allowtransparency="true" allowfullscreen="true"></iframe></div>
+            <h3>Создание изображений</h3>
+            <p>С помощью нейросетей можно создавать уникальные изображения по текстовому описанию.</p>
+            <div class="image-container">
+                <img src="1.jpeg" alt="Изображение 1">
+                <img src="2.jpeg" alt="Изображение 2">
+                <img src="3.png" alt="Изображение 3">
+            </div>
+            <h3>Создание музыки</h3>
+            <p>Нейросети способны сочинять музыку в различных жанрах, от классической до электронной.</p>
+            <p>Послушайте песню, созданную нейросетью:</p>
+            <audio controls>
+                <source src="Mame.mp3" type="audio/mp3">
+                Ваш браузер не поддерживает аудио-элемент.
+            </audio>
+        </section>
 
-<section id="transformers">
-    <h2>Трансформеры</h2>
-    <p>Эта архитектура стала популярной благодаря своей способности обрабатывать большие объемы текста и учитывать контекст. Трансформеры используют механизмы внимания.</p>
-    <p><strong>Применение:</strong> Перевод текста, создание чат-ботов, анализ тональности.</p>
-</section>
+        <section id="tools">
+            <h2>Инструменты и ресурсы</h2>
+            <p>Для работы с нейросетями существует множество инструментов и библиотек, таких как:</p>
+            <ul>
+                <li><a href="https://www.perplexity.ai/">Perplexity</a></li>
+                <li>Fusion Brain (ссылка на официальный сайт, если есть)</li>
+                <li><a href="https://www.suno.ai/">Suno.ai</a></li>
+            </ul>
+            <p>Эти инструменты предоставляют мощные средства для разработки, обучения и развертывания нейронных сетей.</p>
+        </section>
 
-<section id="gan">
-    <h2>Генеративно-Состязательные Сети (GAN)</h2>
-    <p>GAN состоят из двух нейросетей — генератора и дискриминатора, которые соревнуются друг с другом. Генератор создает новые данные, а дискриминатор оценивает их качество.</p>
-    <p><strong>Применение:</strong> Создание реалистичных изображений, генерация музыки, улучшение качества изображений.</p>
-</section>
+        <section id="author">
+            <h2>Об авторе</h2>
+            <p>Меня зовут Терехов Сергей Алексеевич и это мой сайт. Я ученик гимназии №122 ученик 6Б класса. этот сайт был сделан
+                помощью нейросети, если у вас есть какие-то вопросы или предложения, вы можете связаться со мной через форму на
+                сайте</p>
+        </section>
+    </main>
 
-<footer style="text-align:center; padding:10px; background:#35424a; color:white;">
-    &copy; 2025 Главные Нейросети
-</footer>
+    <footer>
+        <p>&copy; 2024. Все права защищены.</p>
+    </footer>
 
+    <div class="help-button" onclick="openForm()">?</div>
+
+    <div class="form-popup" id="myForm">
+        <form action="#" class="form-container" onsubmit="submitForm(); return false;">
+            <h1>Напишите нам</h1>
+
+            <label for="name"><b>Имя</b></label>
+            <input type="text" placeholder="Введите имя" name="name" required id="name">
+
+            <label for="email"><b>Email</b></label>
+            <input type="email" placeholder="Введите email" name="email" required id="email">
+
+            <label for="message"><b>Вопрос</b></label>
+            <textarea placeholder="Ваш вопрос" name="message" rows="4" required id="message"></textarea>
+
+            <button type="submit" class="btn">Отправить</button>
+            <button type="button" class="btn cancel" onclick="closeForm()">Закрыть</button>
+        </form>
+    </div>
+
+    <div class="thank-you-message" id="thankYouMessage">
+        Спасибо за вопрос!
+    </div>
 </body>
+
 </html>
